
    * Fixed cim_provider2.py to properly support shutdown() and can_unload()
      (called from CMPI cleanup() functions).  Support was recently added 
      to cmpi-bindings for this.  (Bart Whiteley)

    * Fixed XML parsing to accept SFCB-style embedded instance parameters.
      (Mihai Ibanescu)

    * Use getpass module instead of pwd to detect local user to fix Win32.
      (Tim Potter)

  PACKAGING:

    * Fix grammatical funkiness in the license text.  No change to
      actual license - still LGPLv2.  (Tim Potter)

    * Added LICENSE.txt file to release.  (Tim Potter)


pywbem-0.7  2008-12-12

  BUG FIXES:

    * Fixed enumInstances and references in cim_provider to do a deep
      copy of the model before filtering instances so provider writers
      are less surprised.  (Bart Whiteley)

    * Added CIMDateTime.__cmp__() so that CIMDateTime instances can be
      compared.  (Bart Whiteley)

    * Fixed data types of method return values for python providers.
      (Bart Whiteley)

    * Fixed REF array out parameters in tupleparse.py.
      (Bart Whiteley)

    * Fixed Array parameters with no elements.  (Bart Whiteley)

    * Fixed precision for real32 and real64 types.  (Bart Whiteley)
 
    * Fixed Array properties where is_array isn't set in __init__.
      (Bart Whiteley)

    * Added NocaseDict.__cmp__(self, other).  (Bart Whiteley)

    * Fixed WBEMConnection.__repr__ for anonymous connections. (Tim Potter)

    * Fixed XML encoding of CIMQualifierDeclarations.  (Bart Whiteley)
    
    * Fixed EnumerateQualifiers if there are no qualifiers.  (Bart Whiteley)
    
    * Fixed InvokeMethod to only send a LOCALCLASSPATH or LOCALINSTANCEPATH,
      not a CLASSPATH or INSTANCEPATH.  (Bart Whiteley)

    * Fix unexpected line break in basic auth header for long
      credentials.  (Daniel Hiltgen)

    * Fix Host: HTTP header when connecting to a unix domain socket.
      (Bart Whiteley)

    * Fix deprecation warnings with Python 2.6.  (Bart Whiteley)